@@ -1,7 +1,7 @@
 Package: SemNetCleaner
 Title: An Automated Cleaning Tool for Semantic and Linguistic Data
 Version: 1.3.5
-Date: 2021-10-21
+Date: 2021-12-11
 Authors@R: c(person("Alexander P.", "Christensen", email = "alexpaulchristensen@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9798-7037")))
 Maintainer: Alexander P. Christensen <alexpaulchristensen@gmail.com>
 Description: Implements several functions that automates the cleaning and spell-checking of text data. Also converges, finalizes, removes plurals and continuous strings, and puts text data in binary format for semantic network analysis. Uses the 'SemNetDictionaries' package to make the cleaning process more accurate, efficient, and reproducible.
@@ -12,7 +12,7 @@ NeedsCompilation: no
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6.0), SemNetDictionaries (>= 0.1.8)
-Imports: hunspell, stringdist, searcher, tcltk, foreign, readxl, R.matlab, stringi, rstudioapi, easycsv, shiny, editData, miniUI, parallel, pbapply
+Imports: hunspell, stringdist, searcher, tcltk, foreign, readxl, R.matlab, stringi, rstudioapi, easycsv, shiny, DT, parallel, pbapply
 Suggests: knitr, htmlTable, markdown, rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
