@@ -1,33 +1,110 @@
-library(shiny)
-library(editData)
-library(miniUI)
+suppressMessages(library(shiny))
+suppressMessages(library(DT))
 
-ui <- fluidPage(
-  gadgetTitleBar("Preprocessing Check"),
-  editableDTUI("table1"),
+dt_output = function(title, id) {
+  fluidRow(column(
+    12, h1(title)),
+    hr(), DTOutput(id), align = "center"
+  )
+}
+
+render_dt = function(data, editable = "cell", server = TRUE, ...) {
+  renderDT(data, selection = "none", server = server, editable = editable, ...)
+}
+
+ui = fluidPage(
+  title = "Edit Data",
+  
+  br(),
+  fluidRow(
+    column(
+      12,
+      actionButton(
+        inputId = "done", "Done"
+      ), align = "right"
+    )
+  ),
+  
+  actionButton(
+    inputId = "addColumn", "Add Column"
+  ),
+  
+  dt_output("Double-click to edit table cells", id = "x"),
+  
+  actionButton(
+    inputId = "addColumn", "Add Column"
+  ),
+  
+  fluidRow(
+    column(
+      12,
+      actionButton(
+        inputId = "done", "Done"
+      ), align = "right"
+    )
+  ),
+  br(), br()
 )
-server <- function(input, output) {
+
+server <- function(input, output, session) {
   
-  # Get 'automated' variable
-  automated = reactive({
-    #as.data.frame(get("automated", envir = environment()))
-    DIR <- tempdir()
-    PATH <- paste(DIR, "automated.csv", sep = "\\")
-    read.data(file = PATH)
+  # Get 'automated' data
+  data = reactive({
+    DIR <- tempdir() # path to temporary directory
+    PATH <- paste(DIR, "automated.csv", sep = "\\") # path to "automated.csv"
+    read.data(file = PATH) # read in data
   })
   
-  # Call GUI
-  df = callModule(editableDT, "table1", data = automated)
+  # Set up reactive value
+  reactiveData = reactiveVal()
   
-  # Check for 'done' button press
+  # Observe data
+  observeEvent(data(),{
+    reactiveData(data())
+  })
+  
+  # Set number of items that appear on each page
+  options(DT.options = list(pageLength = 25))
+  
+  # Setup table
+  output$x = render_dt({
+      reactiveData()
+  }, list(
+    target = "cell",
+    disable = list(columns = 1)
+  ))
+  
+  # Edit a single cell
+  proxy = dataTableProxy("x")
+  observeEvent(input$x_cell_edit, {
+    info = input$x_cell_edit
+    newData <- reactiveData()
+    newData[info$row, info$col] <- suppressWarnings(
+      coerceValue(info$value, newData[info$row, info$col])
+    )
+    reactiveData(newData)
+    replaceData(proxy, reactiveData(), resetPaging = FALSE)
+  })
+  
+  # Add a column
+  observeEvent(input$addColumn,{
+    newData <- reactiveData()
+    newData[[paste("to", ncol(newData), sep = "_")]] <- vector("character", length = nrow(newData))
+    reactiveData(newData)
+    replaceData(proxy, reactiveData(), resetPaging = TRUE)
+    output$x = render_dt({
+      reactiveData()
+    }, list(
+      target = "cell",
+      disable = list(columns = 1)
+    ))
+  })
+  
+  # Check for 'finish' button press
   observeEvent(input$done, {
-    stopApp(df())
-  })
-  
-  # Check for 'cancel' button press
-  observeEvent(input$cancel, {
-    stopApp()
+    stopApp(reactiveData())
   })
   
 }
+
 shinyApp(ui, server)
